# Random-Python-Projects

./: .env  .env.example  .gitignore  BANKACCOUNT.py  Image background remover.py  MLP in Tensorflow.ipynb  README.md  Siamese Network.ipynb  age.py  brithfile.py  class dunder.py  class.py  daily_commit_log.txt  edges_in_images.py  eyebooklogin.py  password generator.py  restaurant menu.py  rockpaperscissors.py  searching algorithms.py  sfh2.py  spartan vs wizard.py
Basic-Password-Generator/: password generator.py
EyeBook/: eyebooklogin.py
Getting-Started-with-OOP-in-Python/: BANKACCOUNT.py  class dunder.py  class.py  spartan vs wizard.py
Github-Readme-Creator/: pyproject.toml  requirements.txt
Github-Readme-Creator/app/: config.py  main.py  models.py  routes.py  services.py
Github-Readme-Creator/readme-gen/: index.html  package-lock.json  package.json
Github-Readme-Creator/readme-gen/src/: App.css  App.tsx  index.css
Github-Readme-Creator/readme-gen/src/components/: OutputBox.tsx  Sidebar.tsx
Image-BG-Remover/: Image_background_remover.py
ML-DL/: topic-modelling-lda-bert.ipynb
ML-DL/Neural-Based-Reasoning/: Neural_Based_Reasoning_bool_q_data.ipynb
ML-DL/Simple Stock and Curreny Predictions/: app.py  simple_predictions.ipynb
Restaurant-Menu/: restaurant menu.py
Rock-Paper-Scissors/: rockpaperscissors.py
Seaching-Algorithms/: searching algorithms.py
Simple Stock and Curreny Predictions/: app.py  simple_predictions.ipynb
Time-Table-Generator/: .env.example  .gitignore  app.py  requirements.txt
format/: pyvenv.cfg
format/Scripts/: activate
(+14 files in other folders)
