[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-readme-creator"
version = "0.1.0"
description = "AI-powered GitHub README generator using LangGraph and Google Gemini"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn>=0.46.0",
    "python-dotenv>=1.2.2",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "langgraph-prebuilt>=1.0.13",
    "google-genai>=1.75.0",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "PyYAML>=6.0.3",
    "orjson>=3.11.9",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"
